[gd_scene load_steps=5 format=3 uid="uid://red0e830m23n"]

[ext_resource type="Texture2D" uid="uid://dxuryq5nc5b0r" path="res://assets/checkbox_checked_icon.png" id="1_dknbu"]
[ext_resource type="Texture2D" uid="uid://bw5kkbsbd86nx" path="res://assets/checkbox_empty_icon.png" id="2_aeahe"]
[ext_resource type="Script" path="res://ui/fitabox.gd" id="3_65eam"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v002f"]
bg_color = Color(0.6, 1, 0.6, 1)

[node name="FitaBox" type="PanelContainer"]
offset_right = 244.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_v002f")
script = ExtResource("3_65eam")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_font_sizes/font_size = 30
theme_override_icons/checked = ExtResource("1_dknbu")
theme_override_icons/unchecked = ExtResource("2_aeahe")

[node name="EquipButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
flat = true
text_overrun_behavior = 3
clip_text = true

[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/EquipButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
